# kagerou

./: .gitignore  CLA.md  Makefile  README.md  pyproject.toml
examples/: buggy_data_pipeline.py  buggy_server.py  demo_report.json
src/kagerou/: __init__.py  analyzer.py  cli.py  models.py  parser.py  reporter.py
tests/: __init__.py  test_analyzer.py  test_models.py  test_parser.py
